manifest/deploy.yaml
# deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ariba-simulator
  namespace: punchout
spec:
  replicas: 1
  selector:
    matchLabels:
      app: ariba-simulator
  template:
    metadata:
      labels:
        app: ariba-simulator
    spec:
      containers:
      - name: ariba-simulator
        imagePullPolicy: Always
        image: zahcen/ariba-simulator:latest
        ports:
          - containerPort: 5000
      imagePullSecrets:
        - name: dockerhub-secret
