manifest/service.yaml
# service.yaml
apiVersion: v1
kind: Service
metadata:
  name: ariba-simulator
  namespace: punchout
spec:
  selector:
    app: ariba-simulator
  ports:
    - protocol: TCP
      port: 80
      targetPort: 5000
  type: ClusterIP
